cmake_minimum_required (VERSION 3.0)
project(ModelTransformTool)
add_executable(ModelTransformTool ToolModelLoader.h main.cpp AssimpHelper.h DirectoryReader.h TransformToolConstants.h ToolModelLoader.cpp dirent.h DirectoryReader.cpp)
find_package(glfw3 CONFIG REQUIRED)
find_package(GLEW REQUIRED)
find_package(freetype REQUIRED)
find_package(assimp REQUIRED)
target_link_libraries(ModelTransformTool PRIVATE assimp::assimp SOIL glfw GLEW::GLEW freetype)